XW-3294: doc update, fixing wds-is-square for squished buttons

--- a/style-guide/styles/wds-components/_buttons.scss
+++ b/style-guide/styles/wds-components/_buttons.scss
@@ -93,8 +93,13 @@
 		justify-content: center;
 		padding: 0;
 
+		// inline-flex does not work for button on safari
 		@at-root button#{&} {
 			display: inline-block;
+		}
+
+		&.wds-is-squished {
+			@include square(34px);
 		}
 	}
 
